--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
