--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
       {
-        "src": "main.py",
+        "src": "api/index.py",
         "use": "@vercel/python"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "main.py"
+        "dest": "api/index.py"
       }
     ],
     "env": {
@@ -18,3 +18,4 @@
       "ALLOWED_ORIGINS": "@allowed_origins"
     }
   }
+  
