--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,4 @@
 lightgbm
-react-de-speedometer
 fastapi==0.104.1
 uvicorn==0.24.0
 pymongo==4.6.0
@@ -10,3 +9,6 @@ pydantic==2.5.0
 scikit-learn==1.3.2
 joblib==1.3.2
 numpy==1.24.3
+motor 
+python-dotenv
+jwt
