--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,31 @@
-lightgbm
-fastapi==0.104.1
-uvicorn==0.24.0
-pymongo==4.6.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic==2.5.0
-scikit-learn==1.3.2
-joblib==1.3.2
-numpy==1.24.3
-motor 
-python-dotenv
-jwt
+﻿annotated-types==0.7.0
+anyio==4.10.0
+bcrypt==4.3.0
+click==8.2.1
+colorama==0.4.6
+dnspython==2.7.0
+fastapi==0.116.1
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+joblib==1.5.2
+lightgbm==4.6.0
+motor==3.7.1
+numpy==2.3.2
+passlib==1.7.4
+pydantic==2.11.7
+pydantic_core==2.33.2
+PyJWT==2.10.1
+pymongo==4.14.1
+python-dotenv==1.1.1
+PyYAML==6.0.2
+scikit-learn==1.6.1
+scipy==1.16.1
+sniffio==1.3.1
+starlette==0.47.3
+threadpoolctl==3.6.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+uvicorn==0.35.0
+watchfiles==1.1.0
+websockets==15.0.1
